syntax = "proto3";

import "AvatarProto.proto";

package mobisocial.omlet.avatar;

option go_package = "./;protocol";

message InternodeCommand {
	uint32 id = 1;
	enum MethodType {
		CONNECT = 0;
		SUBSCRIBE = 1;
		UNSUBSCRIBE = 2;
	}
	MethodType method = 2;
	Feed feed = 3;
	SubscribeRequest subscribe = 4;
	UnsubscribeRequest unsubscribe = 5;
}

message InternodeReply {
	uint32 id = 1;
	Error error = 2;
	Push push = 3;
	ConnectResult connect = 4;
	SubscribeResult subscribe = 5;
	UnsubscribeResult unsubscribe = 6;
}
